// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components-pro/button/demo/block.md correctly 1`] = `
<div>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-primary c7n-pro-btn-block"
    type="button"
  >
    <span>
      flat按钮
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-block"
    type="button"
  >
    <span>
      raised按钮
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-link c7n-pro-btn-primary c7n-pro-btn-block"
    type="button"
  >
    <span>
      link按钮
    </span>
  </button>
</div>
`;

exports[`renders ./components-pro/button/demo/color.md correctly 1`] = `
<div>
  <label
    class="c7n-pro-switch-wrapper"
  >
    <input
      checked=""
      class="c7n-pro-switch"
      type="checkbox"
      value="true"
    />
    <span
      class="c7n-pro-switch-label"
    >
      Loading
    </span>
  </label>
  <div>
    <div
      style="margin:20px 0"
    >
      Background Color(With raised funcType)
    </div>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Primary
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Default
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-gray c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Gray
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-blue c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Blue
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-green c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Green
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-red c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Red
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <br />
    <br />
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-yellow c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Yellow
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-purple c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Purple
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-dark c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Dark
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
  <div>
    <div
      style="margin:20px 0"
    >
      Font Color(With flat funcType)
    </div>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-primary c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Primary
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Default
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-gray c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Gray
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-blue c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Blue
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-green c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Green
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-red c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Red
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <br />
    <br />
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-yellow c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Yellow
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-purple c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Purple
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-dark c7n-pro-btn-loading"
      type="button"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
        trim="both"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
      <span>
        Dark
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components-pro/button/demo/disable.md correctly 1`] = `
<div>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    type="button"
  >
    <span>
      默认可选择按钮
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn-disabled c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    disabled=""
    type="button"
  >
    <span>
      不可选择按钮
    </span>
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn-disabled c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary"
    disabled=""
    type="button"
  >
    <span>
      不可选择按钮
    </span>
  </button>
  <br />
  <br />
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn-disabled c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-primary"
    disabled=""
    type="button"
  >
    <span>
      不可选择按钮
    </span>
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn-disabled c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default c7n-pro-btn-icon-only"
    disabled=""
    type="button"
  >
    <i
      class="icon icon-save"
    />
  </button>
</div>
`;

exports[`renders ./components-pro/button/demo/funcType.md correctly 1`] = `
<div>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    type="button"
  >
    <span>
      默认raised按钮
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default"
    type="button"
  >
    <span>
      flat按钮
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    type="button"
  >
    <span>
      raised按钮
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-link c7n-pro-btn-default"
    type="button"
  >
    <span>
      link按钮
    </span>
  </button>
</div>
`;

exports[`renders ./components-pro/button/demo/href.md correctly 1`] = `
<div>
  <a
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    href="https://choerodon.io"
    target="_blank"
  >
    <span>
      跳转按钮
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </a>
  <a
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default"
    href="https://choerodon.io"
    target="_blank"
  >
    <span>
      跳转按钮
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </a>
  <a
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default c7n-pro-btn-icon-only"
    href="https://choerodon.io"
    target="_blank"
  >
    <i
      class="icon icon-link"
    />
    <div
      class="c7n-ripple-wrapper"
    />
  </a>
</div>
`;

exports[`renders ./components-pro/button/demo/icon.md correctly 1`] = `
<div>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-icon-only"
    type="button"
  >
    <i
      class="icon icon-save"
    />
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-icon-only"
    type="button"
  >
    <i
      class="icon icon-save"
    />
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-primary"
    type="button"
  >
    <i
      class="icon icon-save"
    />
    <span>
      保存
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-icon-only"
    type="button"
  >
    <i
      class="icon icon-sync"
    />
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default c7n-pro-btn-icon-only"
    type="button"
  >
    <i
      class="icon icon-sync"
    />
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-primary c7n-pro-btn-icon-only"
    type="button"
  >
    <i
      class="icon icon-search"
    />
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn-disabled c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default c7n-pro-btn-icon-only"
    disabled=""
    style="color:#e12330"
    type="button"
  >
    <i
      class="icon icon-close"
    />
  </button>
</div>
`;

exports[`renders ./components-pro/button/demo/loading.md correctly 1`] = `
<div>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-loading"
    type="button"
  >
    <div
      class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
      trim="both"
    >
      <div
        class="c7n-progress-inner"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            r="20"
          />
        </svg>
      </div>
    </div>
    <span>
      保存
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-primary c7n-pro-btn-loading"
    type="button"
  >
    <div
      class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
      trim="both"
    >
      <div
        class="c7n-progress-inner"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            r="20"
          />
        </svg>
      </div>
    </div>
    <span>
      保存
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-icon-only c7n-pro-btn-loading"
    type="button"
  >
    <div
      class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
      trim="both"
    >
      <div
        class="c7n-progress-inner"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            r="20"
          />
        </svg>
      </div>
    </div>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-loading"
    type="button"
  >
    <div
      class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
      trim="both"
    >
      <div
        class="c7n-progress-inner"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            r="20"
          />
        </svg>
      </div>
    </div>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-loading"
    type="submit"
  >
    <div
      class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
      trim="both"
    >
      <div
        class="c7n-progress-inner"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            r="20"
          />
        </svg>
      </div>
    </div>
    <span>
      数据源状态
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <br />
  <br />
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    type="button"
  >
    <span>
      wait promise
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
</div>
`;

exports[`renders ./components-pro/button/demo/size.md correctly 1`] = `
<div>
  <div>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
      type="button"
    >
      <i
        class="icon icon-search"
      />
      <span>
        默认raised按钮
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn-lg c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
      type="button"
    >
      <i
        class="icon icon-search"
      />
      <span>
        大raised按钮
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
      type="button"
    >
      <i
        class="icon icon-search"
      />
      <span>
        小raised按钮
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
  <div>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default"
      type="button"
    >
      <span>
        flat按钮
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn-lg c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default"
      type="button"
    >
      <span>
        大flat按钮
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default"
      type="button"
    >
      <span>
        小flat按钮
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
  <div>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default c7n-pro-btn-icon-only"
      type="button"
    >
      <i
        class="icon icon-search"
      />
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn-lg c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default c7n-pro-btn-icon-only"
      type="button"
    >
      <i
        class="icon icon-search"
      />
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn c7n-pro-btn-flat c7n-pro-btn-default c7n-pro-btn-icon-only"
      type="button"
    >
      <i
        class="icon icon-search"
      />
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components-pro/button/demo/throttle.md correctly 1`] = `
<div>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    type="button"
  >
    <span>
      节流按钮0
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    type="button"
  >
    <span>
      去抖按钮0
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>
</div>
`;

exports[`renders ./components-pro/button/demo/tooltip.md correctly 1`] = `
Array [
  <span
    class="c7n-pro-btn-wrapper c7n-pro-btn-disabled c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-disabled-wrapper"
  >
    <button
      disabled=""
      type="button"
    >
      <span>
        始终显示气泡的按钮
      </span>
    </button>
  </span>,
  <button
    class="c7n-pro-btn-wrapper c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    style="max-width:100px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap"
    type="button"
  >
    <span>
      内容超长时显示气泡&lt;点击改变样式&gt;
    </span>
    <div
      class="c7n-ripple-wrapper"
    />
  </button>,
  <a
    class="c7n-pro-btn-wrapper c7n-pro-btn-disabled c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default"
    disabled=""
    target="_blank"
  >
    <span>
      跳转按钮
    </span>
  </a>,
]
`;
